# netpeek

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
src/: app.rs  dns.rs  format.rs  lib.rs  main.rs  model.rs  services.rs  ui.rs
src/ntstat/: mod.rs  sys.rs  wire.rs
